--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "optimizely-client-sdk": "^1.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
